--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -10,6 +10,11 @@ path = 'contracts/problem-definition.clar'
 clarity_version = 2
 epoch = 2.5
 
+[contracts.solution-evaluation]
+path = 'contracts/solution-evaluation.clar'
+clarity_version = 2
+epoch = 2.5
+
 [contracts.swarm-agent-management]
 path = 'contracts/swarm-agent-management.clar'
 clarity_version = 2
